--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,10 @@
             <li class="list">
               <a href="#" class="project">
                 <img src="./images/hw-2/project1.jpg" alt="сайт Технокряк" width="370" />
-                <h2 class="project-name">Технокряк</h2>
-                <p class="project-type">Веб-сайт</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Технокряк</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="list">
@@ -69,29 +71,37 @@
                   alt="Постер New Orlean vs Golden Star"
                   width="370"
                 />
-                <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                <p class="project-type">Дизайн</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="list">
               <a href="#" class="project">
                 <img src="./images/hw-2/project3.jpg" alt="Ресторан Seafood" width="370" />
-                <h2 class="project-name">Ресторан Seafood</h2>
-                <p class="project-type">Приложение</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Ресторан Seafood</h2>
+                  <p class="project-type">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="list">
               <a href="#" class="project">
                 <img src="./images/hw-2/project4.jpg" alt="Проект Prime" width="370" />
-                <h2 class="project-name">Проект Prime</h2>
-                <p class="project-type">Маркетинг</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Проект Prime</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="list">
               <a href="#" class="project">
                 <img src="./images/hw-2/project5.jpg" alt="Проект Boxes" width="370" />
-                <h2 class="project-name">Проект Boxes</h2>
-                <p class="project-type">Приложение</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Проект Boxes</h2>
+                  <p class="project-type">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="list">
@@ -101,29 +111,37 @@
                   alt="Inspiration has no Borders"
                   width="370"
                 />
-                <h2 class="project-name">Inspiration has no Borders</h2>
-                <p class="project-type">Веб-сайт</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Inspiration has no Borders</h2>
+                  <p class="project-type">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="list">
               <a href="#" class="project">
                 <img src="./images/hw-2/project7.jpg" alt="Издание Limited Edition" width="370" />
-                <h2 class="project-name">Издание Limited Edition</h2>
-                <p class="project-type">Дизайн</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Издание Limited Edition</h2>
+                  <p class="project-type">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="list">
               <a href="#" class="project">
                 <img src="./images/hw-2/project8.jpg" alt="Проект LAB" width="370" />
-                <h2 class="project-name">Проект LAB</h2>
-                <p class="project-type">Маркетинг</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Проект LAB</h2>
+                  <p class="project-type">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="list">
               <a href="#" class="project">
                 <img src="./images/hw-2/project9.jpg" alt="Growing Business" width="370" />
-                <h2 class="project-name">Growing Business</h2>
-                <p class="project-type">Приложение</p>
+                <div class="project-discription">
+                  <h2 class="project-name">Growing Business</h2>
+                  <p class="project-type">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
