--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
       </div>
     </header>
     <main>
-      <section class="hero-section">
+      <section class="section hero-section">
         <div class="box">
           <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn">Заказать услугу</button>
         </div>
       </section>
-      <section class="features">
+      <section class="section features">
         <h2>features</h2>
         <ul class="container features-list">
           <li class="list">
@@ -74,7 +74,7 @@
           </li>
         </ul>
       </section>
-      <section class="work-sect">
+      <section class="section work-sect">
         <h2 class="work-title">Чем мы занимаемся</h2>
         <div class="container">
           <ul class="work-title-list">
@@ -98,7 +98,7 @@
           </ul>
         </div>
       </section>
-      <section class="team-sect">
+      <section class="section team-sect">
         <h2 class="team-title">Наша команда</h2>
         <div class="container">
           <ul class="team-list">
