--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
       </div>
     </header>
     <main>
-      <section>
+      <section class="section">
         <h2 class="visually-hidden">portfolio</h2>
         <div class="container">
           <ul class="portfolio-list">
